This permission is used while in scram_and_sasl used together to create jaas config before broker starts

--- a/packaging/install/cluster-operator/030-ClusterRole-strimzi-kafka-broker.yaml
+++ b/packaging/install/cluster-operator/030-ClusterRole-strimzi-kafka-broker.yaml
@@ -13,3 +13,11 @@ rules:
       - nodes
     verbs:
       - get
+  - apiGroups:
+      - ""
+    resources:
+      # This permission is used while in scram_and_sasl used together
+      - secrets
+    verbs:
+      - list
+      - get
