--- a/examples/security/scram-sha-512-auth/five_secrets.yaml
+++ b/examples/security/scram-sha-512-auth/five_secrets.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: fwss-secret1
+  labels:
+    fwss.freshworks.com/secrets-managed: "true"
 type: Opaque
 data:
   key1: dmFsdWUx # base64 encoded value for "value1"
@@ -11,6 +13,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: fwss-secret2
+  labels:
+    fwss.freshworks.com/secrets-managed: "true"
 type: Opaque
 data:
   key2: dmFsdWUy # base64 encoded value for "value2"
@@ -20,6 +24,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: fwss-secret3
+  labels:
+    fwss.freshworks.com/secrets-managed: "true"
 type: Opaque
 data:
   key3: dmFsdWUz # base64 encoded value for "value3"
@@ -29,6 +35,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: fwss-secret4
+  labels:
+    fwss.freshworks.com/secrets-managed: "true"
 type: Opaque
 data:
   key4: dmFsdWU0 # base64 encoded value for "value4"
@@ -38,6 +46,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: fwss-secret5
+  labels:
+    fwss.freshworks.com/secrets-managed: "true"
 type: Opaque
 data:
   my-user: bXl1c2VycGFzcwo= # base64 encoded value for "myuserpass"
@@ -46,6 +56,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: fwss-admin-secret5
+  labels:
+    fwss.freshworks.com/secrets-managed: "true"
 type: Opaque
 data:
   admin: YWRtaW5zLXNlY3JldAo= # base64 encoded value for "admins-secret"
