--- a/helm-charts/helm3/strimzi-kafka-operator/templates/030-ClusterRole-strimzi-kafka-broker.yaml
+++ b/helm-charts/helm3/strimzi-kafka-operator/templates/030-ClusterRole-strimzi-kafka-broker.yaml
@@ -18,4 +18,12 @@ rules:
   - nodes
   verbs:
   - get
+- apiGroups:
+    - ""
+  resources:
+    # This permission is used while in scram_and_sasl used together
+    - secrets
+  verbs:
+    - list
+    - get
 {{- end -}}
